--- a/SQLiteApplication/SQLiteApplication.csproj
+++ b/SQLiteApplication/SQLiteApplication.csproj
@@ -68,9 +68,13 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserData\Configuration.cs" />
+    <Compile Include="VillageData\TroupMovement.cs" />
+    <Compile Include="Web\AdvancedClient.cs" />
+    <Compile Include="Web\Client.cs" />
     <Compile Include="Web\Farmmanager.cs" />
     <Compile Include="VillageData\Village.cs" />
-    <Compile Include="Web\Client.cs" />
+    <Compile Include="Web\BasisClient.cs" />
+    <Compile Include="Web\PathCreator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
