--- a/SQLiteApplication/SQLiteApplication.csproj
+++ b/SQLiteApplication/SQLiteApplication.csproj
@@ -37,6 +37,12 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="appium-dotnet-driver, Version=3.0.0.2, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Appium.WebDriver.3.0.0.2\lib\net45\appium-dotnet-driver.dll</HintPath>
+    </Reference>
+    <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\packages\Castle.Core.3.3.3\lib\net45\Castle.Core.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -58,7 +64,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Programm.cs" />
+    <Compile Include="PagesData\AttackPage.cs" />
+    <Compile Include="PagesData\BarrackPage.cs" />
+    <Compile Include="PagesData\MainPage.cs" />
+    <Compile Include="PagesData\MarketPage.cs" />
+    <Compile Include="PagesData\OverviewPage.cs" />
+    <Compile Include="PagesData\Page.cs" />
+    <Compile Include="PagesData\PlacePage.cs" />
+    <Compile Include="PagesData\SmithPage.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Tools\MainUpdater.cs" />
     <Compile Include="Tools\MarketUpdater.cs" />
     <Compile Include="Tools\MovementUpdater.cs" />
