--- a/SQLiteApplication/packages.config
+++ b/SQLiteApplication/packages.config
@@ -7,4 +7,5 @@
   <package id="Selenium.Support" version="3.141.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
   <package id="Selenium.WebDriver.GeckoDriver" version="0.23.0.3" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
