--- a/SQLiteApplication/SQLiteApplication.csproj
+++ b/SQLiteApplication/SQLiteApplication.csproj
@@ -85,6 +85,7 @@
     <Compile Include="VillageData\BuildingBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserData\Configuration.cs" />
+    <Compile Include="VillageData\StringToBuildTimeConverter.cs" />
     <Compile Include="VillageData\TroupMovement.cs" />
     <Compile Include="VillageData\Unit.cs" />
     <Compile Include="Web\AdvancedClient.cs" />
