Update And Refactor

--- a/SQLiteApplication/SQLiteApplication.csproj
+++ b/SQLiteApplication/SQLiteApplication.csproj
@@ -66,17 +66,18 @@
     <Compile Include="PagesData\MainPage.cs" />
     <Compile Include="PagesData\MarketPage.cs" />
     <Compile Include="PagesData\OverviewPage.cs" />
-    <Compile Include="PagesData\Page.cs" />
+    <Compile Include="Tools\AbstractPage.cs" />
     <Compile Include="PagesData\PlacePage.cs" />
     <Compile Include="PagesData\SmithPage.cs" />
     <Compile Include="PagesData\StablePage.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Tools\MainUpdater.cs" />
-    <Compile Include="Tools\MarketUpdater.cs" />
-    <Compile Include="Tools\MovementUpdater.cs" />
-    <Compile Include="Tools\SmithUpdater.cs" />
-    <Compile Include="Tools\TroopUpdater.cs" />
-    <Compile Include="Tools\Updater.cs" />
+    <Compile Include="Tools\AbstractBuildingPage.cs" />
+    <Compile Include="UpdatersData\MainUpdater.cs" />
+    <Compile Include="UpdatersData\MarketUpdater.cs" />
+    <Compile Include="UpdatersData\MovementUpdater.cs" />
+    <Compile Include="UpdatersData\SmithUpdater.cs" />
+    <Compile Include="UpdatersData\TroopUpdater.cs" />
+    <Compile Include="Tools\AbstractUpdater.cs" />
     <Compile Include="UserData\ConfigurationManager.cs" />
     <Compile Include="UserData\User.cs" />
     <Compile Include="VillageData\Building.cs" />
@@ -84,7 +85,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserData\Configuration.cs" />
     <Compile Include="VillageData\TroupMovement.cs" />
-    <Compile Include="VillageData\Unit.cs" />
+    <Compile Include="Tools\EnumSpace.cs" />
     <Compile Include="Web\AdvancedClient.cs" />
     <Compile Include="Web\Client.cs" />
     <Compile Include="Web\Farmmanager.cs" />
