--- a/SQLiteApplication/SQLiteApplication.csproj
+++ b/SQLiteApplication/SQLiteApplication.csproj
@@ -58,13 +58,20 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Programm.cs" />
-    <Compile Include="Tools\MainUpdater.cs" />
-    <Compile Include="Tools\MarketUpdater.cs" />
-    <Compile Include="Tools\MovementUpdater.cs" />
-    <Compile Include="Tools\SmithUpdater.cs" />
-    <Compile Include="Tools\TroopUpdater.cs" />
-    <Compile Include="Tools\Updater.cs" />
+    <Compile Include="Page\MainPage.cs" />
+    <Compile Include="Page\MarketPage.cs" />
+    <Compile Include="Page\PlacePage.cs" />
+    <Compile Include="Page\SmithPage.cs" />
+    <Compile Include="Program.cs" />
+    <Compile Include="Tools\AbstractBuildingPage.cs" />
+    <Compile Include="Tools\AbstractPage.cs" />
+    <Compile Include="Tools\Enums.cs" />
+    <Compile Include="Updaters\MainUpdater.cs" />
+    <Compile Include="Updaters\MarketUpdater.cs" />
+    <Compile Include="Updaters\MovementUpdater.cs" />
+    <Compile Include="Updaters\SmithUpdater.cs" />
+    <Compile Include="Updaters\TroopUpdater.cs" />
+    <Compile Include="Tools\AbstractUpdater.cs" />
     <Compile Include="UserData\ConfigurationManager.cs" />
     <Compile Include="UserData\User.cs" />
     <Compile Include="VillageData\Building.cs" />
@@ -74,7 +81,6 @@
     <Compile Include="VillageData\TroupMovement.cs" />
     <Compile Include="Web\AdvancedClient.cs" />
     <Compile Include="Web\Client.cs" />
-    <Compile Include="Web\Farmmanager.cs" />
     <Compile Include="VillageData\Village.cs" />
     <Compile Include="Web\PathCreator.cs" />
   </ItemGroup>
@@ -82,6 +88,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Selenium.Chrome.WebDriver.2.43\build\Selenium.Chrome.WebDriver.targets" Condition="Exists('..\packages\Selenium.Chrome.WebDriver.2.43\build\Selenium.Chrome.WebDriver.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
