--- a/SQLiteApplication/SQLiteApplication.csproj
+++ b/SQLiteApplication/SQLiteApplication.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserData\Configuration.cs" />
     <Compile Include="VillageData\ResourcesManager.cs" />
+    <Compile Include="VillageData\TradeManager.cs" />
     <Compile Include="VillageData\TroupMovement.cs" />
     <Compile Include="Web\AdvancedClient.cs" />
     <Compile Include="Web\Client.cs" />
