--- a/OutputProject/packages.config
+++ b/OutputProject/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
+  <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
   <package id="Selenium.WebDriver.ChromeDriver" version="2.45.0" targetFramework="net461" />
+  <package id="Selenium.WebDriver.GeckoDriver" version="0.24.0" targetFramework="net461" />
 </packages>
